# pybuild-header-dependency

./: .gitignore  LICENSE  README.md  get_version.py  pyproject.toml  setup.py
.github/workflows/: build.yml
src/pybuild_header_dependency/: __init__.py  git_downloader.py  github_downloader.py  gitlab_downloader.py  header_resolver.py  package_downloader.py  pkg_path.py  pkgs.json  pkgs.py
src/pybuild_header_dependency/all_pkgs/: __init__.py  boost.py  eigen.py
src/pybuild_header_dependency/custom_sources/: boost.py
tests/: test_download.py
