[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pybuild-header-dependency"
authors = [{name = "Tony Xiang", email="tonyxiang@live.nl"}]
description = "Helper package to resolve C/C++ header-only libraries for Python build with native extensions"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.7"
dependencies = [
    "requests"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  'pytest'
]

[project.urls]
Home-page = "https://github.com/TonyXiang8787/pybuild-header-dependency"

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.setuptools.dynamic]
version = {file = "VERSION"}
